[tool.poetry]
name = "price converter"
version = "0.1.1"
description = ""
authors = ["yurylabko <yuryLabko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
pyinstaller = "^6.4.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
